k8s/image-weather-recognition-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-weather-recognition-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: image-weather-recognition
  ports:
    - port: 5000
      targetPort: 5000
